Version that works, without call analysis
