# swagger.yml
@@ -1,6 +1,6 @@
 swagger: "2.0"
 info:
-  description: This is the swagger file that goes with our server code
+  description: voice.over.ai hackathon backend
   version: "1.0.0"
   title: Swagger Rest Article
 consumes:
@@ -10,125 +10,206 @@ produces:
 
 basePath: /api
 
-# Paths supported by the server application
 paths:
-  /people:
+
+  /analyzeCallFrame:
     get:
-      operationId: people.read_all
-      tags:
-        - People
-      summary: Read the entire list of people
-      description: Read the list of people
-      parameters:
-        - name: length
-          in: query
-          type: integer
-          description: Number of people to get from people
-          required: false
-        - name: offset
-          in: query
-          type: integer
-          description: Offset from beginning of list where to start gathering people
-          required: false
+      operationId: api.analyzeCallFrame
       responses:
-        200:
-          description: Successfully read people list operation
+        '200':
+          description: Call frame.
           schema:
-            type: array
-            items:
-              properties:
-                fname:
-                  type: string
-                lname:
-                  type: string
-                timestamp:
-                  type: string
+            $ref: '#/definitions/CallFrame'
 
-    post:
-      operationId: people.create
-      tags:
-        - People
-      summary: Create a person and add it to the people list
-      description: Create a new person in the people list
-      parameters:
-        - name: person
-          in: body
-          description: Person to create
-          required: True
-          schema:
-            type: object
-            properties:
-              fname:
-                type: string
-                description: First name of person to create
-              lname:
-                type: string
-                description: Last name of person to create
-      responses:
-        201:
-          description: Successfully created person in list
-
-  /people/{lname}:
+  /employees/{employeeId}/calls/{callId}:
     get:
-      operationId: people.read_one
-      tags:
-        - People
-      summary: Read one person from the people list
-      description: Read one person from the people list
+      operationId: api.getCall
       parameters:
-        - name: lname
+        - name: employeeId
           in: path
-          description: Last name of the person to get from the list
+          type: string
+          required: True
+        - name: callId
+          in: path
           type: string
           required: True
       responses:
-        200:
-          description: Successfully read person from people list operation
+        '200':
+          description: Call object.
           schema:
-            properties:
-              fname:
-                type: string
-              lname:
-                type: string
-              timestamp:
-                type: string
+            $ref: '#/definitions/Call'
 
-    put:
-      operationId: people.update
-      tags:
-        - People
-      summary: Update a person in the people list
-      description: Update a person in the people list
+  /employees/{employeeId}:
+    get:
+      operationId: api.getEmployee
       parameters:
-        - name: lname
+        - name: employeeId
           in: path
-          description: Last name of the person to update in the list
           type: string
           required: True
-        - name: person
-          in: body
+      responses:
+        '200':
+          description: Employee object.
           schema:
-            type: object
-            properties:
-              fname:
-                type: string
-              lname:
-                type: string
-      responses:
-        200:
-          description: Successfully updated person in people list
+            $ref: '#/definitions/Employee'
 
-    delete:
-      operationId: people.delete
-      tags:
-        - People
-      summary: Delete a person from the people list
-      description: Delete a person
-      parameters:
-        - name: lname
-          in: path
-          type: string
-          required: True
+  /company:
+    get:
+      operationId: api.getCompany
       responses:
-        200:
-          description: Successfully deleted a person from people list
+        '200':
+          description: Company object.
+          schema:
+            $ref: '#/definitions/Company'
+
+definitions:
+
+  Statistics:
+    type: object
+    properties:
+      totalFrames:
+        type: integer
+      genderMale:
+        type: integer
+      genderFemale:
+        type: integer
+      emotionCalm:
+        type: integer
+      emotionHappy:
+        type: integer
+      emotionSad:
+        type: integer
+      emotionAngry:
+        type: integer
+      emotionFearful:
+        type: integer
+      emotionNeutral:
+        type: integer
+      conversationTopic_informationQuery:
+        type: integer
+      conversationTopic_pickupCollection:
+        type: integer
+      conversationTopic_delivery:
+        type: integer
+      typeBusiness:
+        type: integer
+      typePrivate:
+        type: integer
+      satisfactionSatisfied:
+        type: integer
+      satisfactionUnsatisfied:
+        type: integer
+      satisfactionNeutral:
+        type: integer
+      kindnessKind:
+        type: integer
+      kindnessUnkind:
+        type: integer
+      kindnessNeutral:
+        type: integer
+
+  CallFrame:
+    type: object
+    example: |
+      {
+        "gender": "male",
+        "emotion": "calm",
+        "conversationTopic_informationQuery": false,
+        "conversationTopic_pickupCollection": true,
+        "conversationTopic_delivery": false,
+        "type": "business",
+        "satisfaction": "satisfied"
+        "kindness": "unkind",
+      }
+    properties:
+      gender:
+        type: string
+        enum:
+          - male
+          - female
+      emotion:
+        type: string
+        enum:
+          - calm
+          - happy
+          - sad
+          - angry
+          - fearful
+          - neutral
+      conversationTopic_informationQuery:
+        type: boolean
+      conversationTopic_pickupCollection:
+        type: boolean
+      conversationTopic_delivery:
+        type: boolean
+      type:
+        type: string
+        enum:
+          - none
+          - business
+          - private
+      satisfaction:
+        type: string
+        enum:
+          - satisfied
+          - unsatisfied
+          - neutral
+      kindness:
+        type: string
+        enum:
+          - kind
+          - unkind
+          - neutral
+
+  Call:
+    type: object
+    properties:
+      datetime:
+        type: string
+        format: date-time
+      length:
+        type: integer
+        minimum: 0
+      timeline:
+        type: array
+        readOnly: true
+        minItems: 0
+        maxItems: 10000
+        items:
+          $ref: '#/definitions/CallFrame'
+      statistics:
+        $ref: '#/definitions/Statistics'
+
+  Employee:
+    type: object
+    properties:
+      callIds:
+        type: array
+        readOnly: true
+        minItems: 0
+        maxItems: 1000
+        items:
+          type: string
+      name:
+        type: string
+      lengthAverage:
+        type: integer
+        minimum: 0
+      statistics:
+        $ref: '#/definitions/Statistics'
+
+  Company:
+    type: object
+    properties:
+      employeeIds:
+        type: array
+        readOnly: true
+        minItems: 0
+        maxItems: 1000
+        items:
+          type: string
+      lengthAverage:
+        type: integer
+        minimum: 0
+      statistics:
+        $ref: '#/definitions/Statistics'
